# rs-screener

./: compute_returns.py  data-kr.js  data-kr.json  data-us.js  data-us.json  data.js  data.json  fetch_universe.py  fetch_universe_kr.py  fetch_universe_us.py  index.html  pyproject.toml  refresh.py  sector_map_kr.json  series-kr.js  universe-kr.json  universe-us.json  universe.json
.github/workflows/: refresh.yml
